Override sheep eating to have them wear down the grass slower via grazing, add a config that makes them wear down grass less, default of 10% rate. Add AT for sheep stuff.

--- a/build.gradle
+++ b/build.gradle
@@ -107,3 +107,9 @@ publishing {
         maven { url "$buildDir/../../maven" }
     }
 }
+
+jar {
+    manifest {
+        attributes 'FMLAT': 'desirepaths_at.cfg'
+    }
+}
